Website/APc/log.log
[15/Oct/2014 13:10:26] ERROR [django.request:231] Internal Server Error: /cover
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 87, in get_response
    response = middleware_method(request)
  File "/usr/local/lib/python2.7/dist-packages/django/middleware/common.py", line 73, in process_request
    urlresolvers.is_valid_path("%s/" % request.path_info, urlconf)):
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 614, in is_valid_path
    resolve(path, urlconf)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 489, in resolve
    return get_resolver(urlconf).resolve(path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 340, in resolve
    sub_match = pattern.resolve(new_path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 224, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 231, in callback
    self._callback = get_callable(self._callback_str)
  File "/usr/local/lib/python2.7/dist-packages/django/utils/lru_cache.py", line 101, in wrapper
    result = user_function(*args, **kwds)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 97, in get_callable
    mod = import_module(mod_name)
  File "/usr/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/rik/programs/A-Pc/Website/APc/pcbuilder/views.py", line 81
    def cover()
              ^
SyntaxError: invalid syntax
[15/Oct/2014 13:10:26] ERROR [django.request:231] Internal Server Error: /cover
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 87, in get_response
    response = middleware_method(request)
  File "/usr/local/lib/python2.7/dist-packages/django/middleware/common.py", line 73, in process_request
    urlresolvers.is_valid_path("%s/" % request.path_info, urlconf)):
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 614, in is_valid_path
    resolve(path, urlconf)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 489, in resolve
    return get_resolver(urlconf).resolve(path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 340, in resolve
    sub_match = pattern.resolve(new_path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 224, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 231, in callback
    self._callback = get_callable(self._callback_str)
  File "/usr/local/lib/python2.7/dist-packages/django/utils/lru_cache.py", line 101, in wrapper
    result = user_function(*args, **kwds)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 97, in get_callable
    mod = import_module(mod_name)
  File "/usr/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/rik/programs/A-Pc/Website/APc/pcbuilder/views.py", line 81
    def cover()
              ^
SyntaxError: invalid syntax
[15/Oct/2014 13:11:09] ERROR [django.request:231] Internal Server Error: /cover
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 87, in get_response
    response = middleware_method(request)
  File "/usr/local/lib/python2.7/dist-packages/django/middleware/common.py", line 73, in process_request
    urlresolvers.is_valid_path("%s/" % request.path_info, urlconf)):
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 614, in is_valid_path
    resolve(path, urlconf)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 489, in resolve
    return get_resolver(urlconf).resolve(path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 340, in resolve
    sub_match = pattern.resolve(new_path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 224, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 231, in callback
    self._callback = get_callable(self._callback_str)
  File "/usr/local/lib/python2.7/dist-packages/django/utils/lru_cache.py", line 101, in wrapper
    result = user_function(*args, **kwds)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 118, in get_callable
    (lookup_view, mod_name))
ViewDoesNotExist: Could not import pcbuilder.views.cover. View does not exist in module pcbuilder.views.
[15/Oct/2014 13:11:26] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:01] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:01] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:02] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:02] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:02] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:02] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:03] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:03] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:03] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:03] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:03] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:03] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:04] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:04] WARNING [django.request:143] Not Found: /cover.html
[15/Oct/2014 13:12:05] ERROR [django.request:231] Internal Server Error: /cover
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 87, in get_response
    response = middleware_method(request)
  File "/usr/local/lib/python2.7/dist-packages/django/middleware/common.py", line 73, in process_request
    urlresolvers.is_valid_path("%s/" % request.path_info, urlconf)):
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 614, in is_valid_path
    resolve(path, urlconf)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 489, in resolve
    return get_resolver(urlconf).resolve(path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 340, in resolve
    sub_match = pattern.resolve(new_path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 224, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 231, in callback
    self._callback = get_callable(self._callback_str)
  File "/usr/local/lib/python2.7/dist-packages/django/utils/lru_cache.py", line 101, in wrapper
    result = user_function(*args, **kwds)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 97, in get_callable
    mod = import_module(mod_name)
  File "/usr/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/rik/programs/A-Pc/Website/APc/pcbuilder/views.py", line 16
    def processoren(request):
      ^
IndentationError: expected an indented block
[15/Oct/2014 13:13:05] ERROR [django.request:231] Internal Server Error: /cover
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 87, in get_response
    response = middleware_method(request)
  File "/usr/local/lib/python2.7/dist-packages/django/middleware/common.py", line 72, in process_request
    if (not urlresolvers.is_valid_path(request.path_info, urlconf) and
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 614, in is_valid_path
    resolve(path, urlconf)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 489, in resolve
    return get_resolver(urlconf).resolve(path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 338, in resolve
    for pattern in self.url_patterns:
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 367, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 361, in urlconf_module
    self._urlconf_module = import_module(self.urlconf_name)
  File "/usr/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/rik/programs/A-Pc/Website/APc/APc/urls.py", line 16, in <module>
    url(r'^cover/'),
TypeError: url() takes at least 2 arguments (1 given)
[15/Oct/2014 13:20:48] WARNING [django.request:143] Not Found: /favicon.ico
[15/Oct/2014 13:20:48] WARNING [django.request:143] Not Found: /favicon.ico
[15/Oct/2014 14:24:49] INFO [root:63] 3
[15/Oct/2014 14:24:53] INFO [root:63] 10
[15/Oct/2014 14:24:57] INFO [root:63] 400
[15/Oct/2014 14:25:08] INFO [root:63] 1000
[15/Oct/2014 14:25:24] INFO [root:63] 4
[15/Oct/2014 14:25:28] INFO [root:63] 9000
[15/Oct/2014 14:25:36] INFO [root:63] 15
[15/Oct/2014 14:26:05] INFO [root:63] 15
[15/Oct/2014 14:26:13] INFO [root:63] 15
[15/Oct/2014 14:26:45] INFO [root:63] 15
[15/Oct/2014 14:26:53] INFO [root:63] 15
